# Proyecto-Final_COGA

./: .gitignore  README.md
exit8/: CMakeLists.txt  Camera.cpp  exit8.slnx  main.cpp
exit8/exit8/: exit8.frag  exit8.vcxproj  exit8.vcxproj.filters  exit8.vert
exit8/include/: AnomalyType.h  Camera.h  Constants.h  GameLogic.h  GameState.h  Lighting.h  Mesh.h  Room.h  RoomVariant.h
exit8/include/BibliotecasCurso/: esfera.h
exit8/include/glad/: glad.h
exit8/src/: Camera.cpp  GameLogic.cpp  Lighting.cpp  Mesh.cpp  Room.cpp  RoomVariant.cpp  glad.c  main.cpp
